--- a/openedx/features/course_experience/templates/course_experience/course-home-fragment.html
+++ b/openedx/features/course_experience/templates/course_experience/course-home-fragment.html
@@ -14,10 +14,7 @@ from django.core.urlresolvers import reverse
 from django_comment_client.permissions import has_permission
 from openedx.core.djangolib.js_utils import dump_js_escaped_json, js_escaped_string
 from openedx.core.djangolib.markup import HTML
-from openedx.features.course_experience import (
-    course_experience_config,
-    UNIFIED_COURSE_EXPERIENCE_FLAG,
-)
+from openedx.features.course_experience import UNIFIED_COURSE_EXPERIENCE_FLAG
 %>
 
 <%block name="content">
@@ -60,7 +57,7 @@ from openedx.features.course_experience import (
     <div class="page-content">
         <div class="layout layout-1q3q">
             <main class="layout-col layout-col-b">
-                % if welcome_message_fragment and course_experience_config().is_enabled(UNIFIED_COURSE_EXPERIENCE_FLAG, course.id):
+                % if welcome_message_fragment and UNIFIED_COURSE_EXPERIENCE_FLAG.is_enabled(course.id):
                     <div class="section section-dates">
                         ${HTML(welcome_message_fragment.body_html())}
                     </div>
@@ -78,7 +75,7 @@ from openedx.features.course_experience import (
                                 ${_("Bookmarks")}
                             </a>
                         </li>
-                        % if course_experience_config().is_enabled(UNIFIED_COURSE_EXPERIENCE_FLAG, course.id):
+                        % if UNIFIED_COURSE_EXPERIENCE_FLAG.is_enabled(course.id):
                             <li>
                                 <a href="${reverse('openedx.course_experience.course_updates', args=[course.id])}">
                                     <span class="icon fa fa-newspaper-o" aria-hidden="true"></span>
