--- a/lms/static/sass/course/instructor/_instructor_2.scss
+++ b/lms/static/sass/course/instructor/_instructor_2.scss
@@ -1244,6 +1244,24 @@
   .division-scheme-container {
     // See https://css-tricks.com/snippets/css/a-guide-to-flexbox/
     display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+
+    .division-scheme {
+      font-size: 18px;
+    }
+
+    .division-scheme-label {
+      font-weight: bold;
+    }
+
+    .division-scheme-item {
+      width: 30%;
+    }
+
+    .field-message {
+        font-size: 13px;
+    }
   }
 
   // cohort management
