--- a/lms/templates/instructor/instructor_dashboard_2/instructor_dashboard_2.html
+++ b/lms/templates/instructor/instructor_dashboard_2/instructor_dashboard_2.html
@@ -123,7 +123,7 @@ from openedx.core.djangolib.markup import HTML
           % for section_data in sections:
             ## This is necessary so we don't scrape 'section_display_name' as a string.
             <% dname = section_data['section_display_name'] %>
-            <li class="nav-item"><button type="button" class="btn-link" data-section="${ section_data['section_key'] }">${_(dname)}</button></li>
+            <li class="nav-item"><button type="button" class="btn-link ${ section_data['section_key'] }" data-section="${ section_data['section_key'] }">${_(dname)}</button></li>
           % endfor
         </ul>
 
