Fix for LEARNER-859: Updating styling on the course updates page to more clearly differentiate between multiple updates. Specifically: - Updated styling on date in the top left corner - Added horizontal line between updates - Removed ability to toggle updates on and off - Cleaned up code to always show all updates:

--- a/lms/static/sass/features/_course-experience.scss
+++ b/lms/static/sass/features/_course-experience.scss
@@ -171,3 +171,23 @@
     }
   }
 }
+
+// Course Updates Page
+.course-updates {
+  .all-updates {
+      .updates-article {
+        margin: ($baseline/2) 0;
+        padding-bottom: ($baseline/2);
+        border-bottom: 1px solid $lms-border-color;
+        .date {
+          font-size: font-size(small);
+          font-weight: 300;
+          float: none;
+        }
+        &:last-child {
+          border-bottom: 0;
+        }
+      }
+
+  }
+}
