--- a/lms/static/sass/features/_course-experience.scss
+++ b/lms/static/sass/features/_course-experience.scss
@@ -175,19 +175,20 @@
 // Course Updates Page
 .course-updates {
   .all-updates {
-      .updates-article {
-        margin: ($baseline/2) 0;
-        padding-bottom: ($baseline/2);
-        border-bottom: 1px solid $lms-border-color;
-        .date {
-          font-size: font-size(small);
-          font-weight: 300;
-          float: none;
-        }
-        &:last-child {
-          border-bottom: 0;
-        }
+    .updates-article {
+      margin: ($baseline*6/5) 0;
+      padding-bottom: ($baseline*6/5);
+      border-bottom: 1px solid $lms-border-color;
+      .date {
+        font-size: font-size(small);
+        font-weight: 300;
+        float: none;
+        padding-bottom: ($baseline/4);
       }
-
+      &:last-child {
+        border-bottom: 0;
+      }
+    }
   }
 }
+
