--- a/openedx/features/course_experience/templates/course_experience/course-updates-fragment.html
+++ b/openedx/features/course_experience/templates/course_experience/course-updates-fragment.html
@@ -36,18 +36,22 @@ from openedx.features.course_experience import UNIFIED_COURSE_EXPERIENCE_FLAG
         </div>
     </header>
     <div class="page-content">
-        <div class="all-updates">
-          % for index, update in enumerate(updates):
-            <article class="updates-article">
-              % if not update.get("is_error"):
-                <div class="date" id="msg-date-${index}">${update.get("date")}</div>
-              % endif
-                <div class="article-content" id="msg-content-${index}">
-                    ${update.get("content")}
-                </div>
-            </article>
-          % endfor
-        </div>
+        % if len(plain_html_updates) > 0:
+            ${HTML(plain_html_updates)}
+        % else:
+            <div class="all-updates">
+                % for index, update in enumerate(updates):
+                <article class="updates-article">
+                    % if not update.get("is_error"):
+                    <div class="date">${update.get("date")}</div>
+                    % endif
+                    <div class="article-content">
+                        ${HTML(update.get("content"))}
+                    </div>
+                </article>
+              % endfor
+            </div>
+        % endif
     </div>
 </div>
 </%block>
