--- a/lms/static/sass/course/instructor/_instructor_2.scss
+++ b/lms/static/sass/course/instructor/_instructor_2.scss
@@ -1258,7 +1258,9 @@
     }
 
     .division-scheme-item {
-      width: 30%;
+      padding-left: 1%;
+      padding-right: 1%;
+      min-width: 30%;
     }
 
     .field-message {
